[package]
name = "cat2"
version = "0.0.0"
edition = "2021"
license = "GPL-3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = { version = "1.0.75" }

[profile.dev.package."*"]
opt-level = 3